[package]
name = "dracula"
version = "0.1.0"
authors = ["Rowan <r.parry@erasmusmc.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.0"
tokio = { version = "1.5.0", features = ["full"] }
deadpool-postgres = "0.7.0"
deadpool = "0.7.0"
config = "0.11.0"
rawsql = "0.1.0"
distance = "0.4.0"
futures = "0.3.12"
chrono = "0.4.19"
env_logger = "0.8.3"
log = "0.4.14"
pbr = "1.0.4"
